@@ -78,6 +78,7 @@ on 'develop' => sub {
   requires "Test::Needs" => "0";
   requires "Test::Pod" => "1.41";
   requires "Test::Pod::Coverage" => "1.08";
+  requires "Test::Pod::LinkCheck" => "0";
   requires "Test::Portability::Files" => "0";
   requires "Test::RequiresInternet" => "0";
   requires "Test::Vars" => "0.014";
