@@ -20,6 +20,7 @@ StaticInstall.dry_run = 0
 dir = script
 
 [RunExtraTests]
+[Test::Pod::LinkCheck]
 
 [Prereqs / RuntimeRequires]
 perl = 5.006
